alignment fixes

--- a/frontend/src/app/features/upload/upload.component.css
+++ b/frontend/src/app/features/upload/upload.component.css
@@ -187,3 +187,9 @@ hr {
     border-color: black;
     color: black;
   }
+
+  .sbom {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
